# datafactory

./: .gitignore  README.md  SPEC.md  pyproject.toml
assets_in/: brainstem.manifest.json
content/: characters.toml  scenes.toml  scenes_uz_all.toml
datafarm/: __init__.py  action.py  assets.py  characters.py  cli.py  manifest.py  orchestrator.py  pose.py  qa.py  scenes.py  schema.py  writers.py
datafarm/backends/: aaa.py  base.py  gameinject.py  mock.py  ue.py  unrealzoo.py  video.py
datafarm/farm/: __init__.py  pool.py
docs/: STATUS.md  diversity-plan.md  implementation-guide.md  matrix-game-3-data-system.md  own-track-assets.md  ue-capture-plugin.md  ue-scene-import-and-lumen.md  unrealzoo-backend.md  unrealzoo-eval.md  worldmodel-ue-data-farm-research.md
gameinject/: README.md  STATUS.md
gameinject/framework/launch/: boot_game.sh  bootstrap_proton.sh  headless_gpu_x.sh  probe_env.sh  run_episode.sh  setup_goldberg.sh  setup_steam.sh  smoke_proton.sh
gameinject/framework/lua/: datafarm_agent.lua
scripts/: fetch_character.sh  mixamo_fetch.py  register_characters.py  showcase.py  ue_capture.sh  ue_env.sh  unrealzoo_launch.sh
tests/: conftest.py  test_action.py  test_assets.py  test_backends.py  test_characters.py  test_cli.py  test_farm.py  test_manifest.py  test_orchestrator.py  test_pose.py  test_qa.py  test_scenes.py  test_schema.py  test_ue_backend.py  test_writers.py
ue/DataFarmCapture/: DataFarmCapture.uproject
ue/scripts/: import_character.py  import_characters_batch.py  import_glb.py  import_glb_char.py  make_test_map.py
(+120 files in other folders)
