[project]
name = "datafarm"
version = "0.0.1"
description = "World-model data farm: batch generation of action-labeled FPV/TPV video, Matrix-Game-3.0 style."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "jsonschema>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
datafarm = "datafarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datafarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
